<resources>
    <string name="app_name">ReCratify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Suggestion</string>
    <string name="title_notifications">Explore</string>
    <string name="profil">Profil</string>


    //login //register
    <string name="login">Login</string>
    <string name="title_login">ReCratify</string>
    <string name="masuk">Hello !!</string>
    <string name="daftar">Sign Up</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="signup">Daftar</string>
    <string name="title_signup_page">Please Complete Your Data First</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>


    <string name="logout">Keluar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Hasil Analisis</string>
    <string name="no_text_recognized">No text recognized!</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="confidence_score">Confidence Score</string>
    <string name="prediction">Prediction</string>
    <string name="text_reset">Please Enter Your Email Address To Recieve a Verification Cord</string>
    <string name="empty_text_warning">Silahkan masukkan text terlebih dahulu</string>

    //publish//Youtobe
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galeri</string>
    <string name="description">description</string>
    <string name="analyze">Analyze</string>

    //onboarding
    //headlings
    <string name="heading_one">Welcome to Recrafity</string>
    <string name="heading_two">Scan Your Waste</string>
    <string name="heading_three">Transform Waste into Art</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Join the Go Green movement! Discover creative ways to recycle waste and transform it into amazing handmade crafts.</string>
    <string name="desc_two">Identify the type of waste instantly with our scan feature. We\'ll provide creative ideas to recycle it into art.</string>
    <string name="desc_three">Find inspiration and step-by-step guides to create various handmade products from your waste. From home decor to unique accessories.</string>
    <string name="desc_fourth">Lorem ipsum dolar sit amet, consectetur adpiscing elit, sed do eiudmod tempor incididunt ut labore</string>


    <string name="reset_password">Reset Password</string>
    <string name="verify">verify</string>
    <string name="new_password">New Password</string>
    <string name="confirm_verify">Confirm Verify</string>
    <string name="save">Save</string>
    <string name="reset_code">Reset Code</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="title">Title</string>
    <string name="confirm_kode_verify">Confirm Kode Verify</string>
    <string name="upload_failed">Upload gagal</string>
    <string name="upload_success">Upload berhasil</string>
    <string name="text_home">Do you feel the temperature HOTTER than last Year ?</string>
    <string name="new_password_textView">Your New Password Must Be Differnt From Previously Used Password</string>
    <string name="analysis_failed">Gagal mendapatkan hasil analisis</string>
    <string name="mulai">Lets Go</string>
    <string name="lewati">Skip</string>
    <string name="account">Don\'t Have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="verify_code">Verify Code</string>
    <string name="tangerang">tangerang</string>
    <string name="_30_c">30°C</string>
    <string name="mandatory">Do you feel the temperature HOTTER than last Year ?</string>
    <string name="hello">Hello</string>
</resources>